Nuevo descripciones textuales y cambios capitulo1

--- a/Informe Final/Capitulo1.tex
+++ b/Informe Final/Capitulo1.tex
@@ -16,7 +16,7 @@
 \subsection{Generales}
 \paragraph\indent
 \begin{itemize}
-	\item Desarrollar la interfaz de usuario de un sistema SCADA utilizado para el control y monitoreo de la red de distribución de energía eléctrica de la provincia de Tucumán. El diseño deberá ser modular y con la flexibilidad suficiente para permitir añadir funcionalidades en el futuro sin demasiados costos en codificación.
+	\item Objetivos generales aquí
 \end{itemize}
 
 
