--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -65,25 +65,23 @@
 		\end{itemize}
 		\item Gestión productos finales
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearProductoFinal}{Crear producto final}
-			%\itemCaseUse{buscarAvanzadoProductosFinales}{Buscar avanzado productos finales}
-			%\itemCaseUse{darBajaProductoFinal}{Dar de baja producto final}
-			%\itemCaseUse{darAltaProductoFinal}{Dar de alta producto final}
-			%\itemCaseUse{modificarProductoFinal}{Modificar producto final}
-			%\itemCaseUse{borrarProductoFinal}{Borrar producto final}
+			\itemCaseUse{crearProductoFinal}{Crear producto final}
+			\itemCaseUse{buscarAvanzadoProductosFinales}{Buscar avanzado productos finales}
+			\itemCaseUse{darBajaProductoFinal}{Dar de baja producto final}
+			\itemCaseUse{darAltaProductoFinal}{Dar de alta producto final}
+			\itemCaseUse{modificarProductoFinal}{Modificar producto final}
+			\itemCaseUse{borrarProductoFinal}{Borrar producto final}
 		\end{itemize}
 		\item Gestión grupos de producto
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearGrupoProducto}{Crear grupo de producto}
-			%\itemCaseUse{listarGruposProducto}{Listar grupos de producto}
-			%\itemCaseUse{darBajaGrupoProducto}{Dar de baja grupo de producto}
-			%\itemCaseUse{darAltaGrupoProducto}{Dar de alta grupo de producto}
-			%\itemCaseUse{modificarGrupoProducto}{Modificar grupo de producto}
-			%\itemCaseUse{borrarGrupoProducto}{Borrar grupo de producto}
-			%\itemCaseUse{listarProductosGrupo}{Listar productos por grupo}
-			%\itemCaseUse{modificarPreciosGrupo}{Modificar precios grupo}
+			\itemCaseUse{crearGrupoProducto}{Crear grupo de producto}
+			\itemCaseUse{listarGruposProducto}{Listar grupos de producto}
+			\itemCaseUse{darBajaGrupoProducto}{Dar de baja grupo de producto}
+			\itemCaseUse{darAltaGrupoProducto}{Dar de alta grupo de producto}
+			\itemCaseUse{modificarGrupoProducto}{Modificar grupo de producto}
+			\itemCaseUse{borrarGrupoProducto}{Borrar grupo de producto}
+			\itemCaseUse{listarProductosGrupo}{Listar productos por grupo}
+			\itemCaseUse{modificarPreciosGrupo}{Modificar precios grupo}
 		\end{itemize}
 		\item Gestión ubicaciones
 		\begin{itemize}
@@ -389,22 +387,22 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionTelas/borrarTela.tex}
 
 			%GestionProductosFinales
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/crearProductoFinal.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/buscarAvanzadoProductosFinales.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/darBajaProductoFinal.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/darAltaProductoFinal.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/modificarProductoFinal.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/borrarProductoFinal.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/crearProductoFinal.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/buscarAvanzadoProductosFinales.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/darBajaProductoFinal.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/darAltaProductoFinal.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/modificarProductoFinal.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionProductosFinales/borrarProductoFinal.tex}
 
 			%GestionGruposProducto
-			%\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/crearGrupoProducto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/listarGruposProducto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/darBajaGrupoProducto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/darAltaGrupoProducto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/modificarGrupoProducto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/borrarGrupoProducto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/listarProductosGrupo.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/modificarPreciosGrupo.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/crearGrupoProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/listarGruposProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/darBajaGrupoProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/darAltaGrupoProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/modificarGrupoProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/borrarGrupoProducto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/listarProductosGrupo.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionGruposProducto/modificarPreciosGrupo.tex}
 	
 			%GestionUbicaciones
 			%\input{Capitulos/Capitulo4/CasosUso/GestionUbicaciones/crearUbicacion.tex}
